<resources>
    <string name="greeting_text">Hi Moorthy</string>
    <string name="app_name">My Demo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="user_name_hint">User name</string>

    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login">Login</string>
    <string name="title">Title</string>
    <string name="content">content</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="attach">Attach</string>
</resources>