<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/nature"
        android:scaleType="fitCenter"
        />
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_name_hint"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="302dp" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:background="@color/black"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="343dp" />
    <TextView
        android:id="@+id/textGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:background="@color/highlighted_text_color" />


</LinearLayout>